# cloaked_req

./: .credo.exs  .formatter.exs  .gitignore  .mcp.json  .sobelow-conf  AGENTS.md  CHANGELOG.md  LICENSE  README.md  RELEASE.md  Taskfile.yml  checksum-Elixir.CloakedReq.Native.exs  compose.yml  dprint.json  mix.exs  usage-rules.md
.github/workflows/: checksum.yml  ci.yml  release.yml  tag-on-version-bump.yml
bench/: adapter_perf.exs
lib/: cloaked_req.ex
lib/cloaked_req/: adapter_error.ex  cookie_jar.ex  error.ex  native.ex  request.ex  response.ex
native/cloaked_req_native/: Cargo.toml
native/cloaked_req_native/.cargo/: config.toml
native/cloaked_req_native/src/: error.rs  lib.rs  request.rs  response.rs
test/: cloaked_req_adapter_test.exs  cloaked_req_cookie_jar_test.exs  cloaked_req_e2e_test.exs  cloaked_req_external_fingerprint_test.exs  cloaked_req_test.exs
test/support/: test_server.ex
