[package]
name = "cloaked_req_native"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"

[lib]
name = "cloaked_req_native"
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22"
rustler = { version = "0.37.2", default-features = false, features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "net", "time"] }
wreq = "6.0.0-rc.28"
wreq-util = { version = "3.0.0-rc.10", features = ["emulation-serde"] }

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]
